fix: Scrollbar

--- a/src/views/Nfts/Nfts.styles.css
+++ b/src/views/Nfts/Nfts.styles.css
@@ -1,5 +1,5 @@
 .scroll {
-    overflow-x: scroll;
+    /*overflow-x: scroll;*/
 }
 .scroll::-webkit-scrollbar {
     background: #1f4a21 0% 0% no-repeat padding-box;
